# simplex

./: .gitignore  CMakeLists.txt  File.cpp  File.hpp  Fraction.cpp  Fraction.hpp  Makefile  Matrix.cpp  Matrix.hpp  README.md  Tableaux.cpp  Tableaux.hpp  file.c  file.h  main.c  main.cpp  matrix.c  matrix.h  tableaux.c  tableaux.h  test.txt  util.c  util.h
src/: File.cpp  File.hpp  Fraction.cpp  Fraction.hpp  Matrix.cpp  Matrix.hpp  Tableaux.cpp  Tableaux.hpp  main.cpp
src/Simplex/: Data.hpp  File.cpp  File.hpp  Fraction.cpp  Fraction.hpp  Matrix.cpp  Matrix.hpp  Tableaux.cpp  Tableaux.hpp
